--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <body>
 
 <div id="game">
+  <h1>CONNECT FOUR</h1>
   <table id="board"></table>
 </div>
+<h2>Drop a <span id='colorText' class="p1Color">RED</span> piece.</h2>
 
 <script src="connect4.js"></script>
 
